WIP Still stuck.
Now seems like we'll have to modularize everything, which is going to be
a slog.