@@ -77,6 +77,10 @@
 								<version>${project.version}</version>
 							</path>
 						</annotationProcessorPaths>
+						<compilerArgs>
+							<arg>--add-modules</arg>
+							<arg>java.xml</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 			</plugins>
